# go-secure-utils

./: .gitignore  Makefile  README.md  build_ios.sh  build_mac.sh  cgo.go  go.mod  go_secure_utils.h  main.go  wasm_export.go
examples/c/: CMakeLists.txt  build.sh  build_with_mingw.bat  rsa_example.c
examples/flutter/: .gitignore  README.md  ffigen.yaml  prebuild  pubspec.yaml
examples/flutter/android/: build.gradle  settings.gradle
examples/flutter/android/src/main/: AndroidManifest.xml
examples/flutter/example/: README.md  pubspec.yaml
examples/flutter/example/android/app/: build.gradle.kts
examples/flutter/example/android/app/src/main/: AndroidManifest.xml
examples/flutter/example/android/app/src/main/kotlin/com/example/go_secure_utils_example/: MainActivity.kt
examples/flutter/example/ios/Runner/: Info.plist
examples/flutter/example/ios/Runner.xcodeproj/: project.pbxproj
examples/flutter/example/lib/: main.dart
examples/flutter/example/lib/pages/: rsa_test_page.dart
examples/flutter/example/lib/utils/: ext.dart
examples/flutter/example/lib/widgets/: date_time_picker.dart  file_input_field.dart
examples/flutter/example/linux/: CMakeLists.txt
examples/flutter/example/linux/flutter/: generated_plugins.cmake
examples/flutter/example/linux/runner/: my_application.cc
examples/flutter/example/macos/Runner.xcodeproj/: project.pbxproj
examples/flutter/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
examples/flutter/example/macos/Runner/Configs/: AppInfo.xcconfig
examples/flutter/example/web/: index.html  manifest.json  prebuild
examples/flutter/example/windows/: CMakeLists.txt
examples/flutter/example/windows/flutter/: generated_plugins.cmake
examples/flutter/example/windows/runner/: Runner.rc  main.cpp
examples/flutter/ios/: go_secure_utils.podspec
examples/flutter/lib/: go_secure_utils.dart  go_secure_utils_bindings_generated.dart
examples/flutter/lib/src/: go_secure_utils_bindings_generated.dart  go_secure_utils_io.dart  go_secure_utils_models.dart  go_secure_utils_web.dart  go_web.dart
examples/flutter/linux/: CMakeLists.txt
examples/flutter/macos/: go_secure_utils.podspec
examples/flutter/macos/Classes/: go_secure_utils.c
examples/flutter/src/: CMakeLists.txt  go_secure_utils.c
examples/flutter/windows/: CMakeLists.txt
internal/crypto/rsa/: rsa.go
pkg/crypto/rsa/: rsa.go  rsa_test.go
